src/components/SearchForm/SearchForm.css
.search-form {
  font-family: 'Inter', Arial, sans-serif;
  font-style: normal;
  font-weight: normal;
  padding-top: 60px;
  padding-bottom: 10px;
}

@media screen and (max-width: 768px) {
  .search-form {
    padding-top: 80px;
  }
}

.search-form__form {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.search-form__input {
  width: 100%;
  border-radius: 40px;
  background-color: #f9f9f9;
  border: 1px solid #f9f9f9;
  min-height: 46px;
  outline: none;
  padding: 0 22px 0;
  margin-bottom: 40px;
  font-size: 13px;
  line-height: 17px;
  box-sizing: border-box;
}

.search-form__input::placeholder {
  color: #a0a0a0;
}

@media screen and (max-width: 425px) {
  .search-form__input {
    padding: 0 19px 0;
  }
}

.search-form__input:focus {
  border-color: #000000;
}

.search-form__submit {
  margin: 0;
  padding: 0;
  border-radius: 50%;
  border: none;
  outline: none;
  cursor: pointer;
  position: absolute;
  top: 6px;
  right: 6px;
  font-size: 0;
}

.search-form__submit:hover {
  opacity: 0.7;
}

.search-form__submit-img {
  width: 34px;
  height: 34px;
}

.search-form__border {
  height: 1px;
  width: 100%;
  background: #e8e8e8;
  margin-top: 70px;
}

